Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6910550/T6910550b.out
T6910550b.java:12:10: compiler.err.name.clash.same.erasure: m(Y), m(X)
T6910550b.java:13:10: compiler.err.name.clash.same.erasure: m(Z), m(X)
2 errors
